Bug 393579 - print('> ') not handled correctly
Summary: print('> ') not handled correctly
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: lua-backend (other bugs)
Version First Reported In: 18.04
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Lucas Hermann Negri
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-27 15:17 UTC by Alexander Semke
Modified: 2020-09-23 20:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Semke 2018-04-27 15:17:40 UTC
The current logic in luasession.cpp and luaexpression.cpp doesn't handle printing of lua's prompt correctly.
Comment 1 Nikita Sirgienko 2020-09-23 14:01:23 UTC
Also, code
```
print(3)
print(3*3)
```
doesn't handle correctly - output "9" instead of "3\n9"
Comment 2 Nikita Sirgienko 2020-09-23 20:10:52 UTC
Git commit 37e5621b68261a41d8da6e6fcbb20e1a9c6b67bf by Nikita Sirgienko.
Committed on 23/09/2020 at 20:09.
Pushed by sirgienko into branch 'master'.

[Lua] Improve Lua parsing code. Also add support for expression queue.
FIXED-IN: 20.12

M  +4    -38   src/backends/lua/luaexpression.cpp
M  +1    -1    src/backends/lua/luaexpression.h
M  +120  -38   src/backends/lua/luasession.cpp
M  +9    -3    src/backends/lua/luasession.h

https://invent.kde.org/education/cantor/commit/37e5621b68261a41d8da6e6fcbb20e1a9c6b67bf