[Lua] Improve Lua parsing code. Also add support for expression queue.

BUG: 393579
FIXED-IN: 20.12